--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<name>warranty-reminder</name>
 	<description>Remind People before their listed product warranty expire</description>
 	<properties>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
